# FlappyBird

./: FlappyBird.cabal  LICENSE  README.md  stack.yaml
flappybird/: Main.hs  ObjectSynonyms.hs  ObstacleOperation.hs  Picture.hs  SizeSetting.hs
src/: FlappyBirdClass.hs  GoldOperation.hs  Main.hs  ObjectSynonyms.hs  ObstacleClass.hs  ObstacleOperation.hs  Picture.hs  SizeSetting.hs  Textures.hs
