name:                FlappyBird
version:             0.1.0.0
homepage:            https://github.com/leftthomas/FlappyBird#readme
license:             BSD3
license-file:        LICENSE
author:              leftthomas, BasicCoder, Chissica
maintainer:          leftthomas@qq.com
copyright:           2017 leftthomas, BasicCoder, Chissica
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable FlappyBird
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Types
                      , Wall
                      , Variables
                      , Textures
                      , Player
                      , ObstacleManager
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , FunGEn
  default-language:    Haskell2010

test-suite FlappyBird-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , FlappyBird
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/leftthomas/FlappyBird
